--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -1784,7 +1784,7 @@ td {
 
 .pos .pos-receipt-container > div {
     text-align: left;
-    width: 300px;
+    width: 222px;
     background-color: white;
     margin: 20px;
     padding: 15px;
@@ -1819,14 +1819,16 @@ td {
         visibility: visible;
         background: white !important;
         color: black !important;
+        padding-left: 1em;
+        padding-right: 1em;
     }
     .pos .pos-receipt {
         margin: 0 !important;
         margin-left: auto !important;
         margin-right: auto !important;
         border: none !important;
-        font-size: 14px !important;
-        width: 266px !important;
+        font-size: 12px !important;
+        width: 222px !important;
     }
 }
 
